# tg_speech_to_text_bot

./: CMakeLists.txt  README.md  config.ini  enabled_users.json  ini_reader.cpp  ini_reader.h  logger.cpp  main.cpp  request_settings.h  session.cpp  session.h  threadsafe_queue.h  updates_processor.cpp  updates_processor.h  updates_receiver.cpp  updates_receiver.h
src/: CMakeLists.txt  base64.h  callbacks.cpp  callbacks.h  gcloud_at_gen.cpp  gcloud_at_gen.h  ini_reader.cpp  ini_reader.h  main.cpp  request_settings.cpp  sample_rate_extractor.cpp  sample_rate_extractor.h  session.cpp  settings_structs.cpp  settings_structs.h  threadsafe_queue.cpp  threadsafe_queue.h  updates_processor.cpp  updates_processor.h  updates_receiver.h
src/bot/: CMakeLists.txt  base64.h  bot.cpp  bot.h  bot_commands_processor.cpp  bot_commands_processor.h  bot_utility.cpp  bot_utility.h  callbacks.cpp  callbacks.h  chats_settings.cpp  chats_settings.h  enabled_users.cpp  enabled_users.h  logger.h  session.h  threadsafe_queue.cpp  threadsafe_queue.h  updates_processor.cpp  updates_processor.h  updates_receiver.cpp  updates_receiver.h
src/bot/tests/: CMakeLists.txt  enabled_users_tests.cpp  not_use_enabled_users.json  threadsafe_queue_tests.cpp  use_enabled_users.json
src/external_program_callers/: CMakeLists.txt  gcloud_at_gen.cpp  gcloud_at_gen.h  sample_rate_extractor.cpp
src/external_program_callers/tests/: CMakeLists.txt  sample_rate_extractor_tests.cpp
src/ini_reader/: CMakeLists.txt  ini_reader.cpp  ini_reader.h  settings_structs.cpp  settings_structs.h
src/ini_reader/tests/: CMakeLists.txt  ini_reader_tests.cpp
